err/gridtk.err
Listing '.'...
Listing './bin'...
Compiling './bin/bob_dependecy_graph.py'...
Compiling './bin/bob_new_version.py'...
Compiling './bin/man.py'...
Compiling './bin/qdel.py'...
Compiling './bin/qstat.py'...
Compiling './bin/qsub.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/bob'...
Listing './lib/python3.5/site-packages/bob/extension'...
Listing './lib/python3.5/site-packages/bob/extension/examples'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.extension'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.extension/bob'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.extension/bob/example'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.extension/bob/example/extension'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.extension/doc'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.extension/doc/img'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.library'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.library/bob'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.library/bob/example'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.library/bob/example/library'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.library/doc'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.library/doc/img'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.project'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.project/bob'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.project/bob/example'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.project/bob/example/project'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.project/doc'...
Listing './lib/python3.5/site-packages/bob/extension/examples/bob.example.project/doc/img'...
Listing './lib/python3.5/site-packages/bob/extension/include'...
Listing './lib/python3.5/site-packages/bob/extension/include/bob.extension'...
Listing './lib/python3.5/site-packages/bob/extension/scripts'...
Listing './lib/python3.5/site-packages/bob.extension-2.4.5.egg-info'...
Listing './lib/python3.5/site-packages/gridtk'...
Listing './lib/python3.5/site-packages/gridtk/script'...
Listing './lib/python3.5/site-packages/gridtk/tests'...
Listing './lib/python3.5/site-packages/gridtk-1.5.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
